Port MCA to 1.21.4